Add more to the report, god save me

--- a/report/works.bib
+++ b/report/works.bib
@@ -1,3 +1,16 @@
+@misc{Micciancio_2023,
+  title={Lattice cryptography},
+  url={https://cseweb.ucsd.edu/~daniele/LatticeLinks/SVP.html},
+  journal={SVP},
+  author={Micciancio, Daniele}
+}
+@fplll{fplll_2023,
+  author = {The {FPLLL} development team},
+  title  = {{fplll}, a lattice reduction library, {Version}: 5.4.5},
+  year   = 2023,
+  note   = {Available at \url{https://github.com/fplll/fplll}},
+  url    = {https://github.com/fplll/fplll}
+}
 @survey{Yasuda_Masaya_2021,
   author = {Yasuda, Masaya},
   year   = {2021},
@@ -14,13 +27,6 @@
   year         = {2023},
   note         = {\url{https://eprint.iacr.org/2023/261}},
   url          = {https://eprint.iacr.org/2023/261}
-}
-@fplll{fplll_2023,
-  author = {The {FPLLL} development team},
-  title  = {{fplll}, a lattice reduction library, {Version}: 5.4.5},
-  year   = 2023,
-  note   = {Available at \url{https://github.com/fplll/fplll}},
-  url    = {https://github.com/fplll/fplll}
 }
 @magma{Landsman_Lord_Heckman_1998,
   title     = {Reduction of Matrices and Lattices},
@@ -47,7 +53,7 @@
   pages    = {032115}
 }
 @relation_LLL{MATSUDA_2019,
-  author  = {MATSUDA, Kotaro and TAKAYASU, Atsushi and TAKAGI, Tsuyoshi},
+  author  = {Matsuda, Kotaro and Takayasu, Atsushi and Takagi, Tsuyoshi},
   year    = {2019},
   month   = {09},
   pages   = {1091-1100},
